# NLPBenchmarking

./: .env.gpg  .gitignore  .rsync_exclude  Dockerfile  Makefile  collective_key.gpg  default.nix  flake.nix  linux_requirements.txt  pyproject.toml  service_account.json.gpg
instructions/: running_remotely.md
nix/: sources.json
scripts/: create_instance.sh  create_new_instance.sh  decrypt.sh  initialize_scripts.sh  kill_all_instances.sh  start_and_sync.sh  stop_instances.sh  sync_and_run.sh  watch_files.sh
