[tool.poetry]
name = "nlpbenchmarking"
version = "0.1.0"
description = "Tool useful for benchmarking a suite of different language models under RAG constraints."
authors = ["Johnson Cai", "ZiWei Guo" ,"Luis Garcia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
numpy = "1.26.4"
matplotlib = "3.8.3"
matplotlib-inline = "0.1.6"
seaborn = "0.13.2"
langchain = "0.1.9"
langchain-community = "0.0.24"
langchain-core = "0.1.26"
langchain-openai = "0.0.7"
ragas = "0.1.14"
datasets = "2.17.1"
python-dotenv = "1.0.1"

[tool.poetry.scripts]
ragas = "exec.ragas_entry_point:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
